[gd_scene load_steps=4 format=3 uid="uid://c8asv36vwy4ol"]

[ext_resource type="Theme" uid="uid://csyr5ylftdp4l" path="res://assets/new_theme.tres" id="1_f1vdd"]
[ext_resource type="Script" path="res://class_regions/variables/vars_region.gd" id="2_6ebwb"]
[ext_resource type="PackedScene" uid="uid://x3pv3f8pwmgn" path="res://class_regions/variables/var_container.tscn" id="3_pe63b"]

[node name="ClassRegion" type="PanelContainer"]
theme = ExtResource("1_f1vdd")
script = ExtResource("2_6ebwb")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="HideShowBtn" type="CheckButton" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
tooltip_text = "Show/Hide region content"
button_pressed = true

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_type_variation = &"SubLabel"
text = "Variables"
horizontal_alignment = 2
vertical_alignment = 1

[node name="ItemsRoot" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 8

[node name="VarContainer" parent="MarginContainer/VBoxContainer/ItemsRoot" instance=ExtResource("3_pe63b")]
layout_mode = 2

[node name="AddNewBtn" type="Button" parent="MarginContainer/VBoxContainer/ItemsRoot"]
unique_name_in_owner = true
layout_mode = 2
text = "Add"
