[gd_scene load_steps=4 format=3 uid="uid://b2vw0lgwx7g3r"]

[ext_resource type="Theme" uid="uid://csyr5ylftdp4l" path="res://assets/new_theme.tres" id="1_tdoh2"]
[ext_resource type="Script" path="res://class_regions/variables/vars_region.gd" id="2_28d7c"]
[ext_resource type="PackedScene" uid="uid://boyik7srki0ll" path="res://class_regions/class_region_header.tscn" id="3_154be"]

[node name="VarsRegion" type="PanelContainer" node_paths=PackedStringArray("header")]
theme = ExtResource("1_tdoh2")
script = ExtResource("2_28d7c")
header = NodePath("MarginContainer/VBoxContainer/ClassRegionHeader")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="ClassRegionHeader" parent="MarginContainer/VBoxContainer" instance=ExtResource("3_154be")]
unique_name_in_owner = true
layout_mode = 2
label_text = "Variables"

[node name="ItemsRoot" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 8

[node name="AddNewBtn" type="Button" parent="MarginContainer/VBoxContainer/ItemsRoot"]
unique_name_in_owner = true
layout_mode = 2
text = "Add"

[connection signal="pressed" from="MarginContainer/VBoxContainer/ItemsRoot/AddNewBtn" to="." method="_on_add_new"]
